# combinenet

./: LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements.txt
script/: data_generation.py  model_init.py
script/eval/: eval_charge_batch.py  eval_charge_csv.py  eval_deshaw.py  eval_distribution.py  eval_energy_batch.py  eval_energy_csv.py  eval_mlxdm_batch.py  eval_mlxdm_csv.py
script/model/: charge_modification.py  init.py  merge.py
script/train/: train_charge.py  train_delta.py  train_energy.py  train_force.py  train_xdm.py
src/combinenet/: __init__.py  ase.py  charge.py  combine.py  dataloader.py  delta.py  dftbplus.py  dispersion.py  net.py  sf.py  utils.py
src/mlpotential/: ase.py  combine.py  delta.py  net.py  sf.py  utils.py
