[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "combinenet"
version = "1.0.0"
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "torch>=2.4.0",
    "h5py>=3.11.0",
    "scikit-learn>=1.5.1",
    "tqdm>=4.66.4",
    "ase>=3.1",
]
requires-python = ">=3.9"
authors = [
    {name = "Nguyen Thien Phuc Tu", email="phuctu@cmail.carleton.ca"},
]
description = ""
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["machine learning", "MLP", "neural network potential", "NNP"]

[tool.setuptools]
package-dir = {"" = "src"}